fixed no pick teams in invi bracket leagues

--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -247,13 +247,13 @@
 
               <div class="spacer">&nbsp;</div>
 
-              <div class="game game-top <%= 'winner' if pick.winner_id == player_a.id %>">
+              <div class="game game-top <%= 'winner' if pick&.winner_id == player_a.id %>">
                 <%= player_a&.name %>
                 <%= image_tag "#{player_a.image_url}" %>
               </div>
               <div class="game game-spacer">&nbsp;
               </div>
-              <div class="game game-bottom <%= 'winner' if pick.winner_id == player_b.id %>">
+              <div class="game game-bottom <%= 'winner' if pick&.winner_id == player_b.id %>">
                 <%= player_b&.name %>
                 <%= image_tag "#{player_b.image_url}" %>
               </div>
@@ -269,9 +269,9 @@
 
               <div class="spacer">&nbsp;</div>
 
-              <div class="game game-top <%= 'winner' if pick.winner_id == player_a.id %>"><%= player_a&.name %></div>
+              <div class="game game-top <%= 'winner' if pick&.winner_id == player_a&.id %>"><%= player_a&.name %></div>
               <div class="game game-spacer">&nbsp;</div>
-              <div class="game game-bottom <%= 'winner' if pick.winner_id == player_b.id %>"><%= player_b&.name  %></div>
+              <div class="game game-bottom <%= 'winner' if pick&.winner_id == player_b&.id %>"><%= player_b&.name  %></div>
 
               <div class="spacer">&nbsp;</div>
             <% end %>
@@ -285,9 +285,9 @@
 
               <div class="spacer">&nbsp;</div>
 
-              <div class="game game-top <%= 'winner' if pick.winner_id == player_a.id %>"><%= player_a&.name %></div>
+              <div class="game game-top <%= 'winner' if pick&.winner_id == player_a&.id %>"><%= player_a&.name %></div>
               <div class="game game-spacer">&nbsp;</div>
-              <div class="game game-bottom <%= 'winner' if pick.winner_id == player_b.id %>"><%= player_b&.name  %></div>
+              <div class="game game-bottom <%= 'winner' if pick&.winner_id == player_b&.id %>"><%= player_b&.name  %></div>
 
               <div class="spacer">&nbsp;</div>
             <% end %>
@@ -328,9 +328,9 @@
 
               <div class="spacer">&nbsp;</div>
 
-              <div class="game game-top <%= 'winner' if pick.winner_id == player_a.id %>"><%= player_a&.name %></div>
+              <div class="game game-top <%= 'winner' if pick&.winner_id == player_a&.id %>"><%= player_a&.name %></div>
               <div class="game game-spacer">&nbsp;</div>
-              <div class="game game-bottom <%= 'winner' if pick.winner_id == player_b.id %>"><%= player_b&.name  %></div>
+              <div class="game game-bottom <%= 'winner' if pick&.winner_id == player_b&.id %>"><%= player_b&.name  %></div>
 
               <div class="spacer">&nbsp;</div>
               <div class="spacer">&nbsp;</div>
@@ -348,9 +348,9 @@
 
               <div class="spacer">&nbsp;</div>
 
-              <div class="game game-top <%= 'winner' if pick.winner_id == player_a.id %>"><%= player_a&.name %></div>
+              <div class="game game-top <%= 'winner' if pick&.winner_id == player_a&.id %>"><%= player_a&.name %></div>
               <div class="game game-spacer">&nbsp;</div>
-              <div class="game game-bottom <%= 'winner' if pick.winner_id == player_b.id %>"><%= player_b&.name  %></div>
+              <div class="game game-bottom <%= 'winner' if pick&.winner_id == player_b&.id %>"><%= player_b&.name  %></div>
 
               <div class="spacer">&nbsp;</div>
             <% end %>
@@ -365,9 +365,9 @@
 
               <div class="spacer">&nbsp;</div>
 
-              <div class="game game-top <%= 'winner' if pick.winner_id == player_a.id %>"><%= player_a&.name %></div>
+              <div class="game game-top <%= 'winner' if pick&.winner_id == player_a&.id %>"><%= player_a&.name %></div>
               <div class="game game-spacer">&nbsp;</div>
-              <div class="game game-bottom <%= 'winner' if pick.winner_id == player_b.id %>"><%= player_b&.name  %></div>
+              <div class="game game-bottom <%= 'winner' if pick&.winner_id == player_b&.id %>"><%= player_b&.name  %></div>
 
               <div class="spacer">&nbsp;</div>
             <% end %>
@@ -390,9 +390,9 @@
 
               <div class="spacer">&nbsp;</div>
 
-              <div class="game game-top <%= 'winner' if pick.winner_id == player_a.id %>"><%= player_a&.name %></div>
+              <div class="game game-top <%= 'winner' if pick&.winner_id == player_a&.id %>"><%= player_a&.name %></div>
               <div class="game game-spacer">&nbsp;</div>
-              <div class="game game-bottom <%= 'winner' if pick.winner_id == player_b.id %>"><%= player_b&.name  %></div>
+              <div class="game game-bottom <%= 'winner' if pick&.winner_id == player_b&.id %>"><%= player_b&.name  %></div>
 
               <div class="spacer">&nbsp;</div>
             <% end %>
@@ -410,13 +410,13 @@
 
               <div class="spacer">&nbsp;</div>
 
-              <div class="game game-top <%= 'winner' if pick.winner_id == player_a.id %>">
+              <div class="game game-top <%= 'winner' if pick&.winner_id == player_a&.id %>">
                 <%= player_a&.name %>
                 <%= image_tag "#{player_a.image_url}" %>
               </div>
               <div class="game game-spacer">&nbsp;
               </div>
-              <div class="game game-bottom <%= 'winner' if pick.winner_id == player_b.id %>">
+              <div class="game game-bottom <%= 'winner' if pick&.winner_id == player_b&.id %>">
                 <%= player_b&.name %>
                 <%= image_tag "#{player_b.image_url}" %>
               </div>
@@ -432,9 +432,9 @@
 
               <div class="spacer">&nbsp;</div>
 
-              <div class="game game-top <%= 'winner' if pick.winner_id == player_a.id %>"><%= player_a&.name %></div>
+              <div class="game game-top <%= 'winner' if pick&.winner_id == player_a&.id %>"><%= player_a&.name %></div>
               <div class="game game-spacer">&nbsp;</div>
-              <div class="game game-bottom <%= 'winner' if pick.winner_id == player_b.id %>"><%= player_b&.name  %></div>
+              <div class="game game-bottom <%= 'winner' if pick&.winner_id == player_b&.id %>"><%= player_b&.name  %></div>
 
               <div class="spacer">&nbsp;</div>
             <% end %>
@@ -448,9 +448,9 @@
 
               <div class="spacer">&nbsp;</div>
 
-              <div class="game game-top <%= 'winner' if pick.winner_id == player_a.id %>"><%= player_a&.name %></div>
+              <div class="game game-top <%= 'winner' if pick&.winner_id == player_a&.id %>"><%= player_a&.name %></div>
               <div class="game game-spacer">&nbsp;</div>
-              <div class="game game-bottom <%= 'winner' if pick.winner_id == player_b.id %>"><%= player_b&.name  %></div>
+              <div class="game game-bottom <%= 'winner' if pick&.winner_id == player_b&.id %>"><%= player_b&.name  %></div>
 
               <div class="spacer">&nbsp;</div>
             <% end %>
@@ -491,9 +491,9 @@
 
               <div class="spacer">&nbsp;</div>
 
-              <div class="game game-top <%= 'winner' if pick.winner_id == player_a.id %>"><%= player_a&.name %></div>
+              <div class="game game-top <%= 'winner' if pick&.winner_id == player_a&.id %>"><%= player_a&.name %></div>
               <div class="game game-spacer">&nbsp;</div>
-              <div class="game game-bottom <%= 'winner' if pick.winner_id == player_b.id %>"><%= player_b&.name  %></div>
+              <div class="game game-bottom <%= 'winner' if pick&.winner_id == player_b&.id %>"><%= player_b&.name  %></div>
 
               <div class="spacer">&nbsp;</div>
               <div class="spacer">&nbsp;</div>
@@ -511,9 +511,9 @@
 
               <div class="spacer">&nbsp;</div>
 
-              <div class="game game-top <%= 'winner' if pick.winner_id == player_a.id %>"><%= player_a&.name %></div>
+              <div class="game game-top <%= 'winner' if pick&.winner_id == player_a&.id %>"><%= player_a&.name %></div>
               <div class="game game-spacer">&nbsp;</div>
-              <div class="game game-bottom <%= 'winner' if pick.winner_id == player_b.id %>"><%= player_b&.name  %></div>
+              <div class="game game-bottom <%= 'winner' if pick&.winner_id == player_b&.id %>"><%= player_b&.name  %></div>
 
               <div class="spacer">&nbsp;</div>
             <% end %>
@@ -528,9 +528,9 @@
 
               <div class="spacer">&nbsp;</div>
 
-              <div class="game game-top <%= 'winner' if pick.winner_id == player_a.id %>"><%= player_a&.name %></div>
+              <div class="game game-top <%= 'winner' if pick&.winner_id == player_a&.id %>"><%= player_a&.name %></div>
               <div class="game game-spacer">&nbsp;</div>
-              <div class="game game-bottom <%= 'winner' if pick.winner_id == player_b.id %>"><%= player_b&.name  %></div>
+              <div class="game game-bottom <%= 'winner' if pick&.winner_id == player_b&.id %>"><%= player_b&.name  %></div>
 
               <div class="spacer">&nbsp;</div>
             <% end %>
@@ -553,9 +553,9 @@
 
               <div class="spacer">&nbsp;</div>
 
-              <div class="game game-top <%= 'winner' if pick.winner_id == player_a.id %>"><%= player_a&.name %></div>
+              <div class="game game-top <%= 'winner' if pick&.winner_id == player_a&.id %>"><%= player_a&.name %></div>
               <div class="game game-spacer">&nbsp;</div>
-              <div class="game game-bottom <%= 'winner' if pick.winner_id == player_b.id %>"><%= player_b&.name  %></div>
+              <div class="game game-bottom <%= 'winner' if pick&.winner_id == player_b&.id %>"><%= player_b&.name  %></div>
 
               <div class="spacer">&nbsp;</div>
             <% end %>
@@ -573,13 +573,13 @@
 
               <div class="spacer">&nbsp;</div>
 
-              <div class="game game-top <%= 'winner' if pick.winner_id == player_a.id %>">
+              <div class="game game-top <%= 'winner' if pick&.winner_id == player_a&.id %>">
                 <%= player_a&.name %>
                 <%= image_tag "#{player_a.image_url}" %>
               </div>
               <div class="game game-spacer">&nbsp;
               </div>
-              <div class="game game-bottom <%= 'winner' if pick.winner_id == player_b.id %>">
+              <div class="game game-bottom <%= 'winner' if pick&.winner_id == player_b&.id %>">
                 <%= player_b&.name %>
                 <%= image_tag "#{player_b.image_url}" %>
               </div>
@@ -595,9 +595,9 @@
 
               <div class="spacer">&nbsp;</div>
 
-              <div class="game game-top <%= 'winner' if pick.winner_id == player_a.id %>"><%= player_a&.name %></div>
+              <div class="game game-top <%= 'winner' if pick&.winner_id == player_a&.id %>"><%= player_a&.name %></div>
               <div class="game game-spacer">&nbsp;</div>
-              <div class="game game-bottom <%= 'winner' if pick.winner_id == player_b.id %>"><%= player_b&.name  %></div>
+              <div class="game game-bottom <%= 'winner' if pick&.winner_id == player_b&.id %>"><%= player_b&.name  %></div>
 
               <div class="spacer">&nbsp;</div>
             <% end %>
@@ -611,9 +611,9 @@
 
               <div class="spacer">&nbsp;</div>
 
-              <div class="game game-top <%= 'winner' if pick.winner_id == player_a.id %>"><%= player_a&.name %></div>
+              <div class="game game-top <%= 'winner' if pick&.winner_id == player_a&.id %>"><%= player_a&.name %></div>
               <div class="game game-spacer">&nbsp;</div>
-              <div class="game game-bottom <%= 'winner' if pick.winner_id == player_b.id %>"><%= player_b&.name  %></div>
+              <div class="game game-bottom <%= 'winner' if pick&.winner_id == player_b&.id %>"><%= player_b&.name  %></div>
 
               <div class="spacer">&nbsp;</div>
             <% end %>
@@ -654,9 +654,9 @@
 
               <div class="spacer">&nbsp;</div>
 
-              <div class="game game-top <%= 'winner' if pick.winner_id == player_a.id %>"><%= player_a&.name %></div>
+              <div class="game game-top <%= 'winner' if pick&.winner_id == player_a&.id %>"><%= player_a&.name %></div>
               <div class="game game-spacer">&nbsp;</div>
-              <div class="game game-bottom <%= 'winner' if pick.winner_id == player_b.id %>"><%= player_b&.name  %></div>
+              <div class="game game-bottom <%= 'winner' if pick&.winner_id == player_b&.id %>"><%= player_b&.name  %></div>
 
               <div class="spacer">&nbsp;</div>
               <div class="spacer">&nbsp;</div>
@@ -674,9 +674,9 @@
 
               <div class="spacer">&nbsp;</div>
 
-              <div class="game game-top <%= 'winner' if pick.winner_id == player_a.id %>"><%= player_a&.name %></div>
+              <div class="game game-top <%= 'winner' if pick&.winner_id == player_a&.id %>"><%= player_a&.name %></div>
               <div class="game game-spacer">&nbsp;</div>
-              <div class="game game-bottom <%= 'winner' if pick.winner_id == player_b.id %>"><%= player_b&.name  %></div>
+              <div class="game game-bottom <%= 'winner' if pick&.winner_id == player_b&.id %>"><%= player_b&.name  %></div>
 
               <div class="spacer">&nbsp;</div>
             <% end %>
@@ -691,9 +691,9 @@
 
               <div class="spacer">&nbsp;</div>
 
-              <div class="game game-top <%= 'winner' if pick.winner_id == player_a.id %>"><%= player_a&.name %></div>
+              <div class="game game-top <%= 'winner' if pick&.winner_id == player_a&.id %>"><%= player_a&.name %></div>
               <div class="game game-spacer">&nbsp;</div>
-              <div class="game game-bottom <%= 'winner' if pick.winner_id == player_b.id %>"><%= player_b&.name  %></div>
+              <div class="game game-bottom <%= 'winner' if pick&.winner_id == player_b&.id %>"><%= player_b&.name  %></div>
 
               <div class="spacer">&nbsp;</div>
             <% end %>
@@ -716,9 +716,9 @@
 
               <div class="spacer">&nbsp;</div>
 
-              <div class="game game-top <%= 'winner' if pick.winner_id == player_a.id %>"><%= player_a&.name %></div>
+              <div class="game game-top <%= 'winner' if pick&.winner_id == player_a&.id %>"><%= player_a&.name %></div>
               <div class="game game-spacer">&nbsp;</div>
-              <div class="game game-bottom <%= 'winner' if pick.winner_id == player_b.id %>"><%= player_b&.name  %></div>
+              <div class="game game-bottom <%= 'winner' if pick&.winner_id == player_b&.id %>"><%= player_b&.name  %></div>
 
               <div class="spacer">&nbsp;</div>
             <% end %>
@@ -736,13 +736,13 @@
 
               <div class="spacer">&nbsp;</div>
 
-              <div class="game game-top <%= 'winner' if pick.winner_id == player_a.id %>">
+              <div class="game game-top <%= 'winner' if pick&.winner_id == player_a&.id %>">
                 <%= player_a&.name %>
                 <%= image_tag "#{player_a.image_url}" %>
               </div>
               <div class="game game-spacer">&nbsp;
               </div>
-              <div class="game game-bottom <%= 'winner' if pick.winner_id == player_b.id %>">
+              <div class="game game-bottom <%= 'winner' if pick&.winner_id == player_b&.id %>">
                 <%= player_b&.name %>
                 <%= image_tag "#{player_b.image_url}" %>
               </div>
@@ -758,9 +758,9 @@
 
               <div class="spacer">&nbsp;</div>
 
-              <div class="game game-top <%= 'winner' if pick.winner_id == player_a.id %>"><%= player_a&.name %></div>
+              <div class="game game-top <%= 'winner' if pick&.winner_id == player_a&.id %>"><%= player_a&.name %></div>
               <div class="game game-spacer">&nbsp;</div>
-              <div class="game game-bottom <%= 'winner' if pick.winner_id == player_b.id %>"><%= player_b&.name  %></div>
+              <div class="game game-bottom <%= 'winner' if pick&.winner_id == player_b&.id %>"><%= player_b&.name  %></div>
 
               <div class="spacer">&nbsp;</div>
             <% end %>
@@ -774,9 +774,9 @@
 
               <div class="spacer">&nbsp;</div>
 
-              <div class="game game-top <%= 'winner' if pick.winner_id == player_a.id %>"><%= player_a&.name %></div>
+              <div class="game game-top <%= 'winner' if pick&.winner_id == player_a&.id %>"><%= player_a&.name %></div>
               <div class="game game-spacer">&nbsp;</div>
-              <div class="game game-bottom <%= 'winner' if pick.winner_id == player_b.id %>"><%= player_b&.name  %></div>
+              <div class="game game-bottom <%= 'winner' if pick&.winner_id == player_b&.id %>"><%= player_b&.name  %></div>
 
               <div class="spacer">&nbsp;</div>
             <% end %>
@@ -817,9 +817,9 @@
 
               <div class="spacer">&nbsp;</div>
 
-              <div class="game game-top <%= 'winner' if pick.winner_id == player_a.id %>"><%= player_a&.name %></div>
+              <div class="game game-top <%= 'winner' if pick&.winner_id == player_a&.id %>"><%= player_a&.name %></div>
               <div class="game game-spacer">&nbsp;</div>
-              <div class="game game-bottom <%= 'winner' if pick.winner_id == player_b.id %>"><%= player_b&.name  %></div>
+              <div class="game game-bottom <%= 'winner' if pick&.winner_id == player_b&.id %>"><%= player_b&.name  %></div>
 
               <div class="spacer">&nbsp;</div>
               <div class="spacer">&nbsp;</div>
@@ -837,9 +837,9 @@
 
               <div class="spacer">&nbsp;</div>
 
-              <div class="game game-top <%= 'winner' if pick.winner_id == player_a.id %>"><%= player_a&.name %></div>
+              <div class="game game-top <%= 'winner' if pick&.winner_id == player_a&.id %>"><%= player_a&.name %></div>
               <div class="game game-spacer">&nbsp;</div>
-              <div class="game game-bottom <%= 'winner' if pick.winner_id == player_b.id %>"><%= player_b&.name  %></div>
+              <div class="game game-bottom <%= 'winner' if pick&.winner_id == player_b&.id %>"><%= player_b&.name  %></div>
 
               <div class="spacer">&nbsp;</div>
             <% end %>
@@ -854,9 +854,9 @@
 
               <div class="spacer">&nbsp;</div>
 
-              <div class="game game-top <%= 'winner' if pick.winner_id == player_a.id %>"><%= player_a&.name %></div>
+              <div class="game game-top <%= 'winner' if pick&.winner_id == player_a&.id %>"><%= player_a&.name %></div>
               <div class="game game-spacer">&nbsp;</div>
-              <div class="game game-bottom <%= 'winner' if pick.winner_id == player_b.id %>"><%= player_b&.name  %></div>
+              <div class="game game-bottom <%= 'winner' if pick&.winner_id == player_b&.id %>"><%= player_b&.name  %></div>
 
               <div class="spacer">&nbsp;</div>
             <% end %>
@@ -879,9 +879,9 @@
 
               <div class="spacer">&nbsp;</div>
 
-              <div class="game game-top <%= 'winner' if pick.winner_id == player_a.id %>"><%= player_a&.name %></div>
+              <div class="game game-top <%= 'winner' if pick&.winner_id == player_a&.id %>"><%= player_a&.name %></div>
               <div class="game game-spacer">&nbsp;</div>
-              <div class="game game-bottom <%= 'winner' if pick.winner_id == player_b.id %>"><%= player_b&.name  %></div>
+              <div class="game game-bottom <%= 'winner' if pick&.winner_id == player_b&.id %>"><%= player_b&.name  %></div>
 
               <div class="spacer">&nbsp;</div>
             <% end %>
