fixed unfinished brackets for spark madness

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -101,18 +101,13 @@
             <div class="cta-text-container">
               <h3>Upcoming Events</h3>
               <div class="event-container">
-                <a href="/games/mtg/seasons/vsls9/leagues" class="homepage-event-link">
-                  <p class="event-button">Vintage Super League (Jan 15-Mar 26)</p>
-                </a>
-              </div>
-              <div class="event-container">
                 <a href="/games/mtg/competitions/spark-madness/leagues" class="homepage-event-link">
                   <p class="event-button">Spark Madness (Mar 21-Apr 4)</p>
                 </a>
               </div>
               <div class="event-container">
-                <a href="/games/mtg/competitions/mythic-invitational-19/leagues" class="homepage-event-link">
-                  <p class="event-button">Mythic Invitational (March 28-31)</p>
+                <a href="/games/mtg/competitions/" class="homepage-event-link">
+                  <p class="event-button">Mythic Championship II (April 26-28)</p>
                 </a>
               </div>
             </div>
