--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -52,7 +52,12 @@
         </tbody>
       </table>
     <% elsif @picks && @team.league.draft_type == 'bracket' && @league.leagueable.name == 'Spark Madness' %>
-      You chose <%= Character.find_by_id(@winner.winner_id)&.name %> to win Spark Madness!
+      <%= winning_character = Character.find_by_id(@winner.winner_id) %>
+      <% if winning_character %>
+        You chose <%= winning_character.name %> to win Spark Madness!
+      <% else %>
+        You didn't finish filling out your bracket.
+      <% end %>
 
       <div id="bracket" class="bracket">
         <div class="round round-1">
@@ -89,9 +94,9 @@
 
             <div class="spacer">&nbsp;</div>
 
-            <div class="game game-top <%= 'winner' if pick.winner_id == character_a.id %>"><%= "(#{character_a.seed(@competition)}) #{character_a&.name}" %></div>
+            <div class="game game-top <%= 'winner' if pick&.winner_id == character_a&.id %>"><%= character_a&.seed(@competition) ? "(#{character_a&.seed(@competition)}) #{character_a&.name}" : character_a&.name %></div>
             <div class="game game-spacer">&nbsp;</div>
-            <div class="game game-bottom <%= 'winner' if pick.winner_id == character_b.id %>"><%= "(#{character_b.seed(@competition)}) #{character_b&.name}" %></div>
+            <div class="game game-bottom <%= 'winner' if pick&.winner_id == character_b&.id %>"><%= character_b&.seed(@competition) ? "(#{character_b&.seed(@competition)}) #{character_b&.name}" : character_b&.name %></div>
 
             <div class="spacer">&nbsp;</div>
           <% end %>
@@ -104,9 +109,9 @@
 
             <div class="spacer">&nbsp;</div>
 
-            <div class="game game-top <%= 'winner' if pick.winner_id == character_a.id %>"><%= "(#{character_a.seed(@competition)}) #{character_a&.name}" %></div>
+            <div class="game game-top <%= 'winner' if pick&.winner_id == character_a&.id %>"><%= character_a&.seed(@competition) ? "(#{character_a&.seed(@competition)}) #{character_a&.name}" : character_a&.name %></div>
             <div class="game game-spacer">&nbsp;</div>
-            <div class="game game-bottom <%= 'winner' if pick.winner_id == character_b.id %>"><%= "(#{character_b.seed(@competition)}) #{character_b&.name}" %></div>
+            <div class="game game-bottom <%= 'winner' if pick&.winner_id == character_b&.id %>"><%= character_b&.seed(@competition) ? "(#{character_b&.seed(@competition)}) #{character_b&.name}" : character_b&.name %></div>
 
             <div class="spacer">&nbsp;</div>
           <% end %>
@@ -119,9 +124,9 @@
 
             <div class="spacer">&nbsp;</div>
 
-            <div class="game game-top <%= 'winner' if pick.winner_id == character_a.id %>"><%= "(#{character_a.seed(@competition)}) #{character_a&.name}" %></div>
+            <div class="game game-top <%= 'winner' if pick&.winner_id == character_a&.id %>"><%= character_a&.seed(@competition) ? "(#{character_a&.seed(@competition)}) #{character_a&.name}" : character_a&.name %></div>
             <div class="game game-spacer">&nbsp;</div>
-            <div class="game game-bottom <%= 'winner' if pick.winner_id == character_b.id %>"><%= "(#{character_b.seed(@competition)}) #{character_b&.name}" %></div>
+            <div class="game game-bottom <%= 'winner' if pick&.winner_id == character_b&.id %>"><%= character_b&.seed(@competition) ? "(#{character_b&.seed(@competition)}) #{character_b&.name}" : character_b&.name %></div>
 
             <div class="spacer">&nbsp;</div>
           <% end %>
@@ -133,7 +138,7 @@
 
             <div class="spacer">&nbsp;</div>
 
-            <div class="game game-top"><%= "(#{character_a.seed(@competition)}) #{character_a&.name}" %></div>
+            <div class="game game-top"><%= character_a&.seed(@competition) ? "(#{character_a&.seed(@competition)}) #{character_a&.name}" : character_a&.name %></div>
 
             <div class="spacer">&nbsp;</div>
           <% end %>
@@ -145,7 +150,7 @@
             <div class="winner-title">
               WINNER!
             </div>
-            <%= "(#{character.seed(@competition)}) #{character&.name}" %>
+            <%= character&.seed(@competition) ? "(#{character&.seed(@competition)}) #{character&.name}" : character&.name %>
           </div>
           <div class="spacer">&nbsp;</div>
         </div>
@@ -156,7 +161,7 @@
 
             <div class="spacer">&nbsp;</div>
 
-            <div class="game game-top"><%= "(#{character_a.seed(@competition)}) #{character_a&.name}" %></div>
+            <div class="game game-top"><%= character_a&.seed(@competition) ? "(#{character_a&.seed(@competition)}) #{character_a&.name}" : character_a&.name %></div>
 
             <div class="spacer">&nbsp;</div>
           <% end %>
@@ -169,9 +174,9 @@
 
             <div class="spacer">&nbsp;</div>
 
-            <div class="game game-top <%= 'winner' if pick.winner_id == character_a.id %>"><%= "(#{character_a.seed(@competition)}) #{character_a&.name}" %></div>
+            <div class="game game-top <%= 'winner' if pick&.winner_id == character_a&.id %>"><%= character_a&.seed(@competition) ? "(#{character_a&.seed(@competition)}) #{character_a&.name}" : character_a&.name %></div>
             <div class="game game-spacer">&nbsp;</div>
-            <div class="game game-bottom <%= 'winner' if pick.winner_id == character_b.id %>"><%= "(#{character_b.seed(@competition)}) #{character_b&.name}" %></div>
+            <div class="game game-bottom <%= 'winner' if pick&.winner_id == character_b&.id %>"><%= character_b&.seed(@competition) ? "(#{character_b&.seed(@competition)}) #{character_b&.name}" : character_b&.name %></div>
 
             <div class="spacer">&nbsp;</div>
           <% end %>
@@ -184,9 +189,9 @@
 
             <div class="spacer">&nbsp;</div>
 
-            <div class="game game-top <%= 'winner' if pick.winner_id == character_a.id %>"><%= "(#{character_a.seed(@competition)}) #{character_a&.name}" %></div>
+            <div class="game game-top <%= 'winner' if pick&.winner_id == character_a&.id %>"><%= character_a&.seed(@competition) ? "(#{character_a&.seed(@competition)}) #{character_a&.name}" : character_a&.name %></div>
             <div class="game game-spacer">&nbsp;</div>
-            <div class="game game-bottom <%= 'winner' if pick.winner_id == character_b.id %>"><%= "(#{character_b.seed(@competition)}) #{character_b&.name}" %></div>
+            <div class="game game-bottom <%= 'winner' if pick&.winner_id == character_b&.id %>"><%= character_b&.seed(@competition) ? "(#{character_b&.seed(@competition)}) #{character_b&.name}" : character_b&.name %></div>
 
             <div class="spacer">&nbsp;</div>
           <% end %>
@@ -199,9 +204,9 @@
 
             <div class="spacer">&nbsp;</div>
 
-            <div class="game game-top <%= 'winner' if pick.winner_id == character_a.id %>"><%= "(#{character_a.seed(@competition)}) #{character_a&.name}" %></div>
+            <div class="game game-top <%= 'winner' if pick&.winner_id == character_a&.id %>"><%= character_a&.seed(@competition) ? "(#{character_a&.seed(@competition)}) #{character_a&.name}" : character_a&.name %></div>
             <div class="game game-spacer">&nbsp;</div>
-            <div class="game game-bottom <%= 'winner' if pick.winner_id == character_b.id %>"><%= "(#{character_b.seed(@competition)}) #{character_b&.name}" %></div>
+            <div class="game game-bottom <%= 'winner' if pick&.winner_id == character_b&.id %>"><%= character_b&.seed(@competition) ? "(#{character_b&.seed(@competition)}) #{character_b&.name}" : character_b&.name %></div>
 
             <div class="spacer">&nbsp;</div>
           <% end %>
